fix: align text with icon

--- a/src/components/icon-text.module.scss
+++ b/src/components/icon-text.module.scss
@@ -3,5 +3,6 @@
     height: 1.5rem;
     width: 1rem;
   }
+  align-items: center;
   flex-wrap: nowrap;
 }
